Fix spacing on delete button because it's a btn-danger instead of btn-normal

--- a/web/skins/classic/css/base/skin.css
+++ b/web/skins/classic/css/base/skin.css
@@ -157,7 +157,8 @@ button.btn {
   font-size: 18px;
   margin-bottom: 3px;
 }
-#toolbar .btn-normal {
+#toolbar .btn-normal,
+#toolbar .btn-danger {
   margin-right: 3px;
 }
 #rightButtons .btn-normal,
